dev/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev-frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
